Fixes menu alignment

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -23,7 +23,6 @@ header {
 .nav {
   --nav-gap: 0 26px;
 
-  box-sizing: border-box;
   display: grid;
   grid-template:
     'brand tools hamburger' 1fr / auto 1fr auto;
